Fix spilling issues

--- a/src/Shared-components/navbar/style.module.css
+++ b/src/Shared-components/navbar/style.module.css
@@ -3,7 +3,7 @@
   font-size: 2rem;
 }
 .logo__link {
-  color: inherit
+  color: inherit;
 }
 .nav {
   color: #fff;
@@ -12,13 +12,16 @@
   color: #223364;
 }
 .nav_bg .toggler {
-  color: #223364
+  color: #223364;
 }
 
 .navbar-scrolled {
-  background-color: rgba(255, 255, 255, 0.9) !important;
+  background-color: rgba(255, 255, 255, 1) !important;
   color: #223364;
+  box-shadow: 0px 0px 9px #333;
+  transition: all 0.5s;
 }
+
 .toggler {
   color: #fff;
   font-size: 1.5rem;
